pl 62
	- fixed dist from subdirs
	- junked stepmake/aclocal.m4 (again?)
	- resurrected po stuff

pl 61
	- bf: package-diff

pl 60
	- small fixes.

pl 59
	- bf: package-diff (remove missing automatic)
	- install templates, (urg) INSTALL*1,2 INSTALL_OUT*1,2

pl 58
	- distribute formatted txt files: no yodl needed for operation!
	- guile 1.2 and 1.3 support

pl 57
	- yodl first build script fixes
	- uninstall fixes, but, urg, still have to uninstall twice
	  to get rid of all subdirs
	- installed stepmake
	  * install not required
	  * only installs on explicit make install from toplevel stepdir
	  * rather urg, 'make dist' needs absolute distdir!

pl 56
	- crude metapost stuff

pl 55
	- table-to-html stuff moved .

pl 54
	- && for TeX

pl 53
	- moved TeX stuff into tex template

pl 52
	- striproff
	- reeable $(PACKAGE)_LIBES,_INCLUDES
	- metafont rules
	- GTK+, --, -draw config stuff

pl 51
	- bumped version nr

pl 50
	- bf's: PATHSEP
	- png

pl 49
	- use yodl2ms and striproff for txt conversion
	- bf: chmod fail

pl 48
	- bumped version for yodl after various (lily pl7) changes

pl 47
	- bf: patch in website after 'make release'
	- windows ln -> cp
	- bf: texinfo build

pl 46
	- bf: versioning typo: topleveL_MAJOR
	- bf: reincluded optional STATE-VECTOR
pl 45
	- Foo_rules.make -> foo-rules.make

pl 44
	- split: Toplevel.make, debian/Makefile, Documentation/topdocs/Makefile

pl 43
	- grand split up in targets/rules/variables.  The vars should be before rules!!
pl 42
	- fake-msgfmt.sh; urg copied from fake-yodl

pl 41
	- standard naming: _FILES
	- use install-sh
	- junked most check-X-deps
	- standard naming: dir/out/library.a
	- split C++ / C stuff in separate files.  Moved out of default stuff
	- automake.yo updates
	- fake-yodl.sh

pl 40
	- bf's: texinfo
	- bf's: package-zip.sh for bash-2.0
	- typo package-diff

pl 39
	- disabled toplevel index

pl 38
	- bf's: topweb, Documentation
	- bf: ls-latex

pl 37
	- bf's: add-html-footer (ok, i've been reading /.)
	