@@ -1,0 +1,11 @@
+\score{
+	\notes\relative c''{
+		\property Score.beamquantisation = \none
+		% \property Score.beamquantisation = \normal
+		% \property Score.beamquantisation = \traditional
+		[g16 e f g]
+	}
+	\paper{
+		linewidth = -1.;
+	}
+}
