@@ -1,3 +1,12 @@
+pl 65
+	- unix style pathsep/dirsep for cygwin
+
+pl 64
+	- gcc-2.8/egcs
+
+pl 63
+	- CFLAGS from yodl debian patch
+
 pl 62
 	- fixed dist from subdirs
 	- junked stepmake/aclocal.m4 (again?)
